# ri

./: .clang-format  .gitignore  CMakeLists.txt  makefile  readme.md
res/: book.css  book.yaml
src/: book.cpp  book.hpp  main.cpp  main.hpp
